--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -13,7 +13,11 @@
     <link rel="stylesheet" type="text/css" href="../Style/style-custom.css" />
     <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css" />
 
+    <link rel="stylesheet" type="text/css" href="../ExternalResources/flickity/flickity.css" />
+    <script src="../ExternalResources/flickity/flickity.js"></script>
+
     <link rel="stylesheet" type="text/css" href="../Style/style-home.css" />
+    
 
     <script src="../Script/jquery-3.3.1.min.js"></script>
     <script src="../Script/Header.js"></script>
@@ -56,7 +60,7 @@
     <div id="Header"></div>
 
     <!--Page Content -->
-    <div style="height:100vh">
+    <div style="height:100%">
         <div class="search-block">
             <div>
                 <div class="row font-Sego">
@@ -123,7 +127,22 @@
                 <img src="../resources/2019-03-10 13_56_41-Book Train, Bus & Flights_ Confirmtkt.com.png" class="responsive-custom image-suport">
             </div>
 
-
+            <div>
+                <!-- Flickity HTML init -->
+                <div class="carousel js-flickity">
+                    <div class="carousel-cell">
+                    <img src="../resources/2019-03-10_14-18-552.png" alt="orange tree" />
+                    </div>
+                    <div class="carousel-cell">
+                    <img src="../resources/2019-03-10_14-28-2155.png" alt="submerged" />
+                    </div>
+                    <div class="carousel-cell">
+                    <img src="../resources/2019-03-10_14-28-215521.png" alt="look-out" />
+                    </div>
+                    
+                </div>
+            </div>
+            
         </div>
     </div>
 
