--- a/Style/style-home.css
+++ b/Style/style-home.css
@@ -106,7 +106,10 @@ input[type=text] {
   }
   [type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
+    +
   }
+
+  
 
   .txt1{
     font-size: 27px;
@@ -115,6 +118,95 @@ input[type=text] {
   .image-suport{
     margin-left: 15%;
   }
+
+  /*---------------------------carousel custom css---------------------------------*/
+  * { box-sizing: border-box; }
+
+body { font-family: sans-serif; }
+
+.carousel {
+  background: white;
+  margin-bottom: 70px;
+}
+
+.carousel-cell {
+  width: 70%;
+  height: 200px;
+  /* flex-box, center image in cell */
+  display: -webkit-box;
+  display: -webkit-flex;
+  display:         flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  -webkit-align-items: center;
+          align-items: center;
+}
+
+.carousel-cell img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  /* dim unselected */
+  opacity: 0.7;
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s, transform 0.3s, -webkit-filter 0.3s, filter 0.3s;
+          transition: opacity 0.3s, transform 0.3s, filter 0.3s;
+}
+
+/* brighten selected image */
+.carousel-cell.is-selected img {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-filter: none;
+          filter: none;
+}
+
+@media screen and ( min-width: 768px ) {
+  .carousel-cell {
+    height: 400px;
+  }
+}
+
+@media screen and ( min-width: 960px ) {
+  .carousel-cell {
+    width: 60%;
+  }
+}
+
+.margin-bottum-carousel{
+    
+}
+
+/* buttons, no circle */
+.flickity-prev-next-button {
+  width: 60px;
+  height: 60px;
+  background: transparent;
+  opacity: 0.6;
+}
+.flickity-prev-next-button:hover {
+  background: transparent;
+  opacity: 1;
+}
+/* arrow color */
+.flickity-prev-next-button .arrow {
+  fill: black;
+}
+.flickity-prev-next-button.no-svg {
+  color: black;
+}
+/* closer to edge */
+.flickity-prev-next-button.previous { left: 0; }
+.flickity-prev-next-button.next { right: 0; }
+/* hide disabled button */
+.flickity-prev-next-button:disabled {
+  display: none;
+}
 
 
   /*Responsive*/
@@ -151,6 +243,11 @@ input[type=text] {
         padding-left: 11px;
         padding: 2px;
     }
+
+    .image-suport {
+        margin-left: 15%;
+        margin-top: 44px;
+    }
     
 }
 
@@ -166,6 +263,11 @@ input[type=text] {
 
     .responsive-custom {
         width: 78%;
+        height: auto;
+    }
+
+    #imgTrain {
+        width: 112%;
         height: auto;
     }
 }
@@ -238,9 +340,13 @@ input[type=text] {
         float: left;
         width: 32%;
         height: 70px;
-        font-size: 8px;
+        font-size: 7px;
     }
 
+    .form-inline {
+        flex-direction: row;
+        align-items: stretch;
+    }
 
     
   }
