--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -148,6 +148,10 @@
     align-items: center;
   }
 
+  .margin-left-custom{
+    margin-left: 5%;
+  }
+
 @media only screen and (max-width: 479px){
     .container-custom {
         width: 90%;
