Add mockflow designs to the project

--- a/Layout/TicketSearch.html
+++ b/Layout/TicketSearch.html
@@ -155,25 +155,43 @@
                                                 <input type="text" id="txtNoOfPassengers" placeholder="Enter No">
                                         </form>
                                 </div>
-                                <div class="column-two round-coner font-Sego" style="background-color:#bbb;">
+                                <div class="column-two round-coner font-Sego" style="background-color:#EEEEEE;">
                                         <div class="form-inline">
                                                         <div class="row ful-width">
                                                 <div class="column-A">
-                                                        <h3>sd</h3>
+                                                        <h3>Train Name</h3>
                                                 </div>
                                                 <div class="column-B">
-                                                                <h3>sd</h3>
+                                                                <h3>Departure</h3>
                                                 </div>
                                                 <div class="column-C">
-                                                                <h3>sd</h3>
+                                                                <h3>Destination Time</h3>
                                                 </div>
                                                 <div class="column-D">
-                                                                <h3>sd</h3>
+                                                                <h3>Class,Availability &amp; Fare</h3>
                                                 </div>
                                         </div>
                                         </div>
-                                        <hr>
-                                        <p>Some text..</p>
+                                        <hr style="margin-top: -2%;">
+                                        
+                                        <div id="divTrainList">
+                                                <div class="row round-coner custom-style-list">
+                                                        <div class="column-train-detail-general">
+                                                                <i class="fas fa-subway medium-font-size-icon"></i> <br>
+                                                                <label id="lblTrainName_1"><b>Ruhunu Kumari</b></label> <br>
+                                                                <label id="lblTrainType_1" class="lable-train-type"><b>Express Train</b></label>
+                                                        </div>
+                                                        <div class="column-train-detail-general">
+                                                                asdasds
+                                                        </div>
+                                                        <div class="column-train-detail-general">
+                                                                asdasds
+                                                        </div>
+                                                        <div class="column-train-detail-general">
+                                                                asdasds
+                                                        </div>
+                                                </div>
+                                        </div>
                                 </div>
                         </div>
                 </div>
